--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://fychung.github.io/myblog/'
 languageCode = 'en-us'
 title = "Fengye's Site"
 theme = "ananke" 
